package semantikCheck;

public class Class {
}
