package semantikCheck.expr;

public class InstVar {
}
