package semantikCheck.expr;

public class JNull {
}
