package semantikCheck.expr;

public class Super {
}
