package semantikCheck.stmt;

public class Return {
}
